# EAG

./: .gitignore  README.md  error.md  jshshshshshaha  pyproject.toml  run_checks.sh
docs/: ARCHITECTURE.md  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  ENGINEERING_PLATFORM.md  ROADMAP.md
src/eag/: __init__.py  __main__.py  bootstrap.py  cli.py  version.py
src/eag/approval/: __init__.py  coordinator.py  errors.py  events.py  manager.py  models.py  store.py
src/eag/changeset/: __init__.py  builder.py  errors.py  events.py  metrics.py  models.py  recorder.py  state.py  summary.py
src/eag/config/: __init__.py  loader.py  settings.py
src/eag/core/: __init__.py  tool.py  (+5 more)
tests/: conftest.py  helpers.py  test_approval.py  test_approval_coordinator.py  test_approval_events.py  test_approval_manager.py  test_approved_execution.py  test_ast_rename_engine.py  test_ast_rename_hardening.py  test_changeset.py  test_changeset_builder.py  test_changeset_recorder.py  test_command.py  test_config.py  test_core.py  test_dependency_graph.py  test_dependency_resolver.py  test_effort_estimator.py  test_engineering_models.py  test_event_bus.py  test_events.py  test_execution.py  test_execution.py.bak  test_execution_domain.py  test_execution_policy.py  test_execution_runtime.py  test_execution_runtime_hardening.py  test_explorer.py  test_filesystem.py  test_git.py  test_goal_analyzer.py  test_graph_builder.py  test_graph_models.py  test_graph_runtime.py  test_index_builder.py  test_index_models.py  test_intelligence_pipeline.py  test_kernel.py  test_logging.py  test_operations.py  (+37 more)
(+243 files in other folders)
