[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eag-engineering-agent"
version = "0.1.0"
description = "An open software engineering operating system for AI engineers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.14.2",
    "structlog>=26.1.0",
    "typer>=0.12,<1.0",
]

[project.scripts]
eag = "eag.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["eag"]
